# CalculatorPro

./: .replit  README.md  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  requirements_railway.txt
attached_assets/: Pasted-import-numpy-as-np-import-pandas-as-pd-import-plotly-graph-objects-as-go-import-math-def-convert-bu-1749651525386_1749651525387.txt
calculators/: air_classifier.py  belt_horsepower.py  column_velocity.py  cyclone_separator.py  drag_slide.py  gravity_flow.py  magnetic_separator.py  material_handling.py  pneumatic_conveying.py  screen_sizing.py  screw_conveyor.py  spout_requirements.py  vibrating_feeder.py
data/: materials.py
models/: requests.py  responses.py
services/: calculator_service.py  chart_service.py  material_service.py
utils/: conversions.py  validators.py
