[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-calculators-api"
version = "1.0.0"
description = "Comprehensive FastAPI backend for specialized engineering calculators"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "pydantic==2.11.5",
    "plotly==6.1.2",
    "pandas==2.3.0",
    "numpy==2.3.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]