[project]
name = "engineering-calculators-api"
version = "1.0.0"
description = "Comprehensive FastAPI backend for specialized engineering calculators"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]